# src/main/java/vendredi/soir/karata/endpoint/rest/model/DealOutcome.java
@@ -2,4 +2,4 @@ package vendredi.soir.karata.endpoint.rest.model;
 
 import java.util.List;
 
-public record DealOutcome(List<WinnerInfo> winners) {}
+public record DealOutcome(List<WinnerInfo> winners, List<RevealedHand> revealedHands) {}
